namespace java com.yihu.ehr.pack

struct TJsonPackage {
    1:string id;
    2:string pwd;
    3:string remotePath;
    4:string userId;
    5:string message;
    6:string receiveDate;
    7:string parseDate;
    8:string finishDate;
    9:i32 archiveStatus;
}